# whisper_2.0

./: .env  .env.example  .gitignore  CONTRIBUTING.md  README.md  notebook.ipynb  post_processing_prompt.txt  process_meetings.py  process_new_voice_notes.bat  process_voice_notes.py  process_voice_notes_hidden.vbs  processing_queue.txt  pyproject.toml  quick_process.bat  select_and_process.bat  setup_scheduled_task.py  start_voice_monitor.bat  stop_voice_monitor.bat  test_notification.py  test_voice_system.py  transcribe.bat  transcribe.py  voice_note_monitor.py
.claude/: settings.local.json
app/core/: config.py
app/services/: file_watcher.py  summarization.py  transcription.py
planning/: README.md
scripts/: process_voice_notes.py  processing_prompt.md  setup_scheduled_task.py
src/whisper_2_0/: api_clients.py  audio_processing.py  config.py  main.py  notion_integration.py  summarization.py  transcription.py  utils.py
tests/: test_notification.py  test_processing.py  test_voice_system.py
